<resources>
    <string name="app_name">Projet</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">Nom d\&apos;utilisateur :</string>
    <string name="pass">Mot de passe :</string>
    <string name="conec">Connexion</string>
    <string name="mdpoub">    Mot de passe oublié    </string>
    <string name="creer">Créer un compte</string>

    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="date">Date de naissance :</string>
    <string name="lieu">Lieu de naissance :</string>
    <string name="adresse">Adresse :</string>
    <string name="Annee">Année universitaire :</string>
    <string name="email">E-mail :</string>
    <string name="confirme">Confirmer mot de passe :</string>
    <string name="valider">Valider</string>
    <string name="list">La listes des commentaires : </string>
    <string name="ecrirecomm">Ecrire un commentaire : </string>
    <string name="ok">OK</string>
    <string name="sendPwd">Envoyer Mot De Passe</string>

    <string-array name="mois">
        <item>Janvier</item>
        <item>Février</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Août</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Décembre</item>
    </string-array>

    <string-array name="annee_univ">
        <item>1CPI</item>
        <item>2CPI</item>
        <item>1CS</item>
        <item>2CSSIT</item>
        <item>2CSSIQ</item>
        <item>2CSSIL</item>
        <item>3CSSIT</item>
        <item>3CSSIQ</item>
        <item>3CSSIL</item>
    </string-array>
    <string name="title_activity_creation">Creation</string>
    <string name="title_activity_listes_livres">ListesLivres</string>

    <string-array name="categorie">
        <item>Catégorie</item>
        <item>Java</item>
        <item>SQL</item>
        <item>PHP</item>
        <item>Javascript</item>
        <item>Html</item>
    </string-array>
    <string name="title_activity_detail_livre">DetailLivre</string>
    <string name="title_activity_details">Details</string>
    <string name="logo">logo</string>
    <string name="title_activity_detail_book">DetailBookActivity</string>
    <string name="title_activity_commentaires">CommentairesActivity</string>
    <string name="title_activity_list_books">ListBooksActivity</string>
    <string name="title_activity_mdp">MdpActivity</string>
</resources>
