<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#e1f5fe"
    android:gravity="bottom"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout"
        android:layout_gravity="bottom"
        android:gravity="bottom">

          <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:orientation="vertical"
                android:id="@+id/linearLayout0">

                  <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:background="@drawable/logo_1516683_16t6113j_screen_display"
                        android:layout_marginBottom="50dp"
                        android:layout_weight="1" />


                  <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/user"
                        android:onClick="editTex"
                        android:id="@+id/editText1"
                        android:layout_weight="1" />


                   <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:ems="10"
                        android:id="@+id/editText"
                        android:hint="@string/pass"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:onClick="editTex"
                        android:layout_weight="1"
                        android:inputType="textPassword"/>


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/conec"
                        android:textColor="@color/blanc"
                        android:background="#03a9f4"
                        android:layout_marginTop="5dp"
                        android:id="@+id/connec"
                        android:onClick="renvoi"
                        android:layout_weight="1" />

           </LinearLayout>

           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout1">

                    <Button
                         android:layout_width="160dp"
                         android:layout_height="wrap_content"
                         android:text="@string/mdpoub"
                         android:textSize="12dp"
                         android:layout_marginLeft="5dp"
                         android:textColor="@color/blanc"
                         android:background="#03a9f4"
                         android:id="@+id/oublier"
                         android:onClick="password"/>

                    <Button
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/creer"
                         android:textSize="12dp"
                         android:id="@+id/creer"
                         android:textColor="@color/blanc"
                         android:background="#03a9f4"
                         android:layout_marginLeft="10dp"
                         android:onClick="renvoi"
                         android:layout_weight="1"/>

           </LinearLayout>
    </LinearLayout>



</LinearLayout>
